<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:id="@+id/itemName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:id="@+id/itemCost"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="0.5"
                    android:drawableLeft="@drawable/ic_cost"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/prepTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="0.5"
                    android:drawableLeft="@drawable/ic_prep_time"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <TextView
                    android:id="@+id/itemType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="0.7"
                    android:text="Type :"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/itemFilter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="left"
                    android:lines="4"
                    android:maxLines="4"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/porcCounter"
                    android:layout_width="125dp"
                    android:layout_height="33dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/back"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <Button
                    android:id="@+id/posIncrement"
                    android:layout_width="5dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.3"
                    android:text="+"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/negIncrement"
                    android:layout_width="5dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.3"
                    android:text="-"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addItemBtn"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.3"
                    android:background="#5CB9FF"
                    android:text="Add To Cart" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
