...
    <string name="title_mainMenu">Main Menu</string>
    <string name="title_curOrder">Current Order</string>
    <string name="title_myProfile">My Profile</string>
    <string name="title_category">Category</string>
    <string name="category_name">name</string>
    <string name="item_name">name</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Register</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rpassword">Re-type Password</string>
    <string name="email">Email Address</string>
    <string name="phonenum">Malaysian Phone Number</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="welcome">Welcome, </string>
    <string name="footer_msg">Confirm Order</string>
    <string name="order_header">Total Price(Swipe Me!)</string>
    <string name="curorder">Current Order</string>
    <string name="confirmdel">Confirm to delete?</string>
    <string name="changeporc">Change Portion Amount</string>
...
